source3/smbd/smb2_server.c
@@ -3541,6 +3541,9 @@ static bool is_smb2_recvfile_write(struct smbd_smb2_request_read_state *state)
 	if (IS_PRINT(fsp->conn)) {
 		return false;
 	}
+	if (fsp->base_fsp != NULL) {
+		return false;
+	}
 
 	DEBUG(10,("Doing recvfile write len = %u\n",
 		(unsigned int)(state->pktfull - state->pktlen)));
